--- a/index.html
+++ b/index.html
@@ -2,21 +2,96 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>AstroYou | Celestial Intelligence</title>
+    <meta name="title" content="AstroYou | Celestial Intelligence" />
     <meta
       name="description"
-      content="AstroYou - AI-powered Vedic astrology predictions and Kundali analysis"
+      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance from the Voice of the Stars."
     />
-    <title>AstroYou | Celestial Intelligence</title>
+    <meta
+      name="keywords"
+      content="astrology, vedic astrology, kundali, horoscope, birth chart, jyotish, AI astrology, zodiac, predictions"
+    />
+    <meta name="author" content="AstroYou" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Theme Colors -->
+    <meta name="theme-color" content="#030308" />
+    <meta name="msapplication-TileColor" content="#030308" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://astroyou.app/" />
+    <meta property="og:title" content="AstroYou | Celestial Intelligence" />
+    <meta
+      property="og:description"
+      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
+    />
+    <meta property="og:image" content="https://astroyou.app/og-image.png" />
+    <meta property="og:site_name" content="AstroYou" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://astroyou.app/" />
+    <meta name="twitter:title" content="AstroYou | Celestial Intelligence" />
+    <meta
+      name="twitter:description"
+      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
+    />
+    <meta name="twitter:image" content="https://astroyou.app/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://astroyou.app/" />
+
+    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "AstroYou",
+        "description": "AI-powered Vedic astrology platform for personalized Kundali readings and celestial guidance.",
+        "url": "https://astroyou.app",
+        "applicationCategory": "Lifestyle",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "INR"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "AstroYou"
+        }
+      }
+    </script>
   </head>
   <body>
+    <!-- Skip to main content for accessibility -->
+    <a
+      href="#main-content"
+      class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:z-[9999] focus:bg-gold focus:text-black focus:px-4 focus:py-2 focus:rounded"
+    >
+      Skip to main content
+    </a>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
