feat(astrology): add compatibility analysis with Guna Milan integration
- Introduce new compatibility analysis endpoint and page for relationship matching
- Add framer-motion for smooth page transitions and animations
- Refactor dashboard with Header component and real-time prediction fetching
- Simplify celestial engine by removing sacred geometry for cleaner UI
- Add ForecastData types for high-precision daily horoscope structure
- Implement narrative text support for horoscope API responses
- Refactor landing page with modular Header/Footer components

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="astrology, vedic astrology, kundali, horoscope, birth chart, jyotish, AI astrology, zodiac, predictions"
+      content="astrology, vedic astrology, kundali, horoscope, birth chart, jyotish, vedic astrology, zodiac, predictions"
     />
     <meta name="author" content="AstroYou" />
     <meta name="robots" content="index, follow" />
@@ -83,7 +83,7 @@
       }
     </script>
   </head>
-  <body>
+  <body style="background-color: #030308; margin: 0">
     <!-- Skip to main content for accessibility -->
     <a
       href="#main-content"
