chore(docs): remove AI references from meta descriptions
Removes "AI-powered" claims from all meta descriptions and schema.org metadata to align with the platform's actual Vedic astrology focus.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="AstroYou | Celestial Intelligence" />
     <meta
       name="description"
-      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance from the Voice of the Stars."
+      content="Discover your cosmic blueprint with Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance from the Voice of the Stars."
     />
     <meta
       name="keywords"
@@ -28,7 +28,7 @@
     <meta property="og:title" content="AstroYou | Celestial Intelligence" />
     <meta
       property="og:description"
-      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
+      content="Discover your cosmic blueprint with Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
     />
     <meta property="og:image" content="https://astroyou.app/og-image.png" />
     <meta property="og:site_name" content="AstroYou" />
@@ -40,7 +40,7 @@
     <meta name="twitter:title" content="AstroYou | Celestial Intelligence" />
     <meta
       name="twitter:description"
-      content="Discover your cosmic blueprint with AI-powered Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
+      content="Discover your cosmic blueprint with Vedic astrology. Get personalized Kundali readings, daily horoscopes, and celestial guidance."
     />
     <meta name="twitter:image" content="https://astroyou.app/og-image.png" />
 
@@ -67,7 +67,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "AstroYou",
-        "description": "AI-powered Vedic astrology platform for personalized Kundali readings and celestial guidance.",
+        "description": "Vedic astrology platform for personalized Kundali readings and celestial guidance.",
         "url": "https://astroyou.app",
         "applicationCategory": "Lifestyle",
         "operatingSystem": "Web",
